--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     {% for foi in all %}
-        <p>{{ foi.Body }}</p>
+        <p>{{ foi.Snippet }}</p>
     {% endfor %}
 </body>
 </html>
