--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Matt Prindible</title>
     <link rel="stylesheet" href="https://use.typekit.net/uid6ryj.css">
     <style>
+        body{
+            background-color: #f7fafc;
+            color: #202932;
+        }
         p{
             font-family: forma-djr-display, sans-serif;
             font-weight: 500;
