--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
-    <title>Matt Prindible</title>
+    <title>Failure of Imagination...</title>
     <link rel="stylesheet" href="https://use.typekit.net/uid6ryj.css">
     <style>
         body{
             background-color: #f7fafc;
-            color: #202932;
         }
         p{
             font-family: forma-djr-display, sans-serif;
             font-weight: 500;
             font-style: italic;
             font-size: 4rem;
+            background-color: #1FFFD4;
+            color: #f7fafc;
         }
     </style>
 </head>
