--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     {% for foi in all %}
         <p class = 'marquee'>
-            <span>{{ foi.Snippet }}</span>
+            <span>{{ foi.Body }}</span>
         </p>
     {% endfor %}
 </body>
