--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
-    <title>Failure of Imagination</title>
+    <title>Imagination</title>
     <style>
         @font-face {
             font-family: 'Mondwest-Regular';
